Change so DB username pulls from environment variable

--- a/config/database.yml
+++ b/config/database.yml
@@ -85,5 +85,5 @@ test:
 production:
   <<: *default
   database: cook_book_development
-  username: rubydev
+  username: <%= ENV['COOK_BOOK_DATABASE_USERNAME'] %>
   password: <%= ENV['COOK_BOOK_DATABASE_PASSWORD'] %>
